--- a/config/west.yml
+++ b/config/west.yml
@@ -7,10 +7,10 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-    revision: v0.3
+      revision: main
       import: app/west.yml
-    - name: zmk-unicode
+    - name: zmk-helpers
       remote: urob
-      revision: v0.3 # set to same as ZMK version above
+      revision: main
   self:
     path: config
